--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
         <div id='app'>
             <h1>{{ message }}</h1>
         </div>
+
+        <div id='app-2'>
+            <span v-bind:title='message'>
+                Hover your mouse over me for a few seconds
+                to see my dynamically bound title!
+            </span>
+        </div>
     </body>
     <script>
         let app = new Vue({
             el: '#app',
             data: {
                 message: 'Hello, World!'
+            }
+        })
+    </script>
+    <script>
+            let app2 = new Vue({
+            el: '#app-2',
+            data: {
+                message: 'You loaded this page on' + new Date().toLocaleString()
             }
         })
     </script>
